Fixed link error in Package browser and Template browser Fixed button align for Template in Chrome

--- a/manager/templates/default/css/index.css
+++ b/manager/templates/default/css/index.css
@@ -2039,6 +2039,9 @@ span.required {
 .not-installed .x-grid3-col-info-col{ color: #C34550; }
 
 .inline-button{
+	-webkit-box-align: center;
+	text-align: center;
+	display: inline;
 	margin: 0 auto;
     padding: 8px;
 }
